--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,8 @@ header {
 .timerText, .correctText, .wrongText, .timeOutText {
     font-size: 30px;
     font-family: 'Archivo Narrow', sans-serif;
-    color: rgb(178, 214, 78);
+    /* color: rgb(178, 214, 78); */
+    color: #4a2500;
     /* font-weight: bold; */
     letter-spacing: 3px;
 }
