--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header {
     font-family: 'Archivo Narrow', sans-serif;
     /* color: rgb(178, 214, 78); */
     color: #4a2500;
-    /* font-weight: bold; */
+    font-weight: bold;
     letter-spacing: 3px;
 }
 
