font color change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ header {
 .finishedText {
     font-size: 30px;
     font-family: 'Archivo Narrow', sans-serif;
-    color: rgb(178, 214, 78);
+    color: #4a2500;
     /* font-weight: bold; */
     letter-spacing: 3px;
 }
