--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,8 +91,9 @@ header {
 }
 
 .finishedText {
-    font-size: 30px;
-    color: mediumseagreen;
+    font-size: 35px;
+    color: white;
+    font-weight: bold;
     font-family: Montserrat, sans-serif;
 }
 
