--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,7 @@ header {
 @media screen and (max-width: 360px) {
     header {
         font-size: 65px;
+        padding: 15px 0px 25px 0px;
         
     }
     body {
