--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,11 @@ header {
     border-radius: 5px;
     font-family: Montserrat, sans-serif;
     
+    animation-duration: 0.5s;
+    animation-delay: 0.25s;
+    
+      
+    
 }
 
 .startButton {
@@ -85,12 +90,7 @@ header {
     line-height: 85px;
 }
 
-/* .mainArea {
-    opacity:0;
-    transition: opacity 2s;
-    -webkit-transition: opacity 2s;
 
-} */
 
 .finishedText {
     font-size: 35px;
@@ -123,8 +123,8 @@ header {
 
 @media screen and (max-width: 360px) {
     header {
-        font-size: 65px;
-        padding: 15px 0px 25px 0px;
+        font-size: 40px;
+        padding: 5px 0px 10px 0px;
         
     }
     body {
@@ -138,6 +138,7 @@ header {
     #cheese {
         margin-left: 15px;
         margin-right: 15px;
+        padding: 0px;
     }
    
     
