--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,12 +43,13 @@ header {
 }
 
 .timerText, .correctText, .wrongText, .timeOutText {
-    font-size: 20px;
+    font-size: 23px;
     color: white;
-    padding: 10px; 
+    padding: 15px 0px 10px 0px; 
     background-color: #5cb85c;
     border-radius: 5px;
     font-family: Montserrat, sans-serif;
+    line-height: 33px;
     
     animation-duration: 0.5s;
     animation-delay: 0.25s;
@@ -104,6 +105,11 @@ header {
 .summaryCorrect, .summaryWrong, .summaryUnanswered {
     color: white;
     font-size: 20px;
+    font-family: Montserrat, sans-serif;
+}
+.witty {
+    font-size: 25px;
+    color: white;
     font-family: Montserrat, sans-serif;
 }
 
